--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 body {
-  width: 375px;
-  height: 590px;
+  max-width: 100%;
+  margin: 0;
 }
 
 header {
   background-color: #3c3a39;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   height: 48px;
+}
+
+.supporting-text {
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
   width: 77px;
   height: 24px;
+  display: flex;
   font-family: sans-serif, 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -19,16 +27,20 @@ header {
   line-height: 24px;
   color: #fff;
   text-align: center;
-  padding-top: 15px;
+  padding-top: 13px;
+  margin-left: 15px;
 }
 
 .image {
-  padding-top: 23px;
-  padding-left: 250px;
+  padding-top: 18px;
+  margin-right: 15px;
 }
 
 .headline {
   background: #1c1a19;
+  background-image: url(images/illustration.png);
+  background-repeat: no-repeat;
+  background-position: 100% 130%;
 }
 
 h2 {
@@ -65,7 +77,7 @@ p {
   color: #fff;
 }
 
-.socialmedia {
+ul {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -73,7 +85,9 @@ p {
   padding-bottom: 40px;
   width: 200px;
   height: 40px;
+  list-style: none;
 }
+
 a {
   color: white;
   text-decoration: none;
