--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2 {
   width: 327px;
 }
 
-p {
+.introduction-text {
   width: 359px;
   height: 27px;
   font-family: sans-serif, 'Roboto';
@@ -91,4 +91,153 @@ ul {
 a {
   color: white;
   text-decoration: none;
+}
+
+/* work-section */
+.container {
+  display: grid;
+  grid-template-columns: 327px;
+}
+
+.projects {
+  margin-left: 40px;
+}
+
+.recent-work {
+  display: flex;
+  flex-direction: column;
+}
+
+.recent-text {
+  height: 83px;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 52px;
+  margin: 6rem 0 3rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.line {
+  width: 279px;
+  border: 1px solid #212121;
+}
+
+.orange-image {
+  display: flex;
+  justify-content: center;
+  width: 279px;
+  height: 207px;
+}
+
+h4 {
+  color: #091e42;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400px;
+  font-size: 32px;
+  line-height: 44px;
+}
+
+.text {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #091e42;
+}
+
+.languages {
+  display: flex;
+  flex-direction: row;
+  gap: 0.6rem;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8993a4;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 0.6rem 0.7rem;
+}
+
+.recent-work-button {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  letter-spacing: 0.03em;
+  color: #fff;
+  width: 124px;
+  background: #ff6b00;
+  border: none;
+}
+
+.stories-container {
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 386px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5rem;
+  background-image: url(images/Mask-Group.png);
+}
+
+.stories-head {
+  color: #fff;
+  padding-left: 16px;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+.p-text {
+  color: #fff;
+  padding-left: 16px;
+  width: 275px;
+  height: 87px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.boxes-container {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  padding-left: 16px;
+}
+
+.boxes {
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  padding: 0.6rem 0.7rem;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+button {
+  background-color: #fc6703;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  color: #fff;
+  border: none;
+  font-size: 1.1rem;
+  padding: 0.7rem;
+  width: 287px;
+}
+
+button:hover {
+  color: black;
 }
