--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
 }
 
-
 header {
   background-color: #3c3a39;
   display: flex;
@@ -21,7 +20,7 @@ header {
   width: 77px;
   height: 24px;
   display: flex;
-  font-family: sans-serif, 'Roboto';
+  font-family: sans-serif, "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -46,7 +45,7 @@ header {
 }
 
 .greeting {
-  font-family: sans-serif, 'Round';
+  font-family: sans-serif, "Round";
   font-size: 50px;
   font-weight: 400px;
   color: #ff6b00;
@@ -60,7 +59,7 @@ header {
 .introduction-text {
   width: 359px;
   height: 27px;
-  font-family: sans-serif, 'Roboto';
+  font-family: sans-serif, "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -72,7 +71,7 @@ header {
 .description {
   width: 327px;
   height: 123px;
-  font-family: sans-serif, 'Poppins';
+  font-family: sans-serif, "Poppins";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -124,7 +123,7 @@ a {
 
 .recent-text {
   height: 83px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 35px;
@@ -149,7 +148,7 @@ a {
 
 h4 {
   color: #091e42;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400px;
   font-size: 32px;
@@ -157,7 +156,7 @@ h4 {
 }
 
 .text {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -177,7 +176,7 @@ h4 {
   align-items: center;
   justify-content: center;
   border: 1px solid #8993a4;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -185,7 +184,7 @@ h4 {
 }
 
 .recent-work-button {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -210,7 +209,7 @@ h4 {
 .stories-head {
   color: #fff;
   padding-left: 16px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -221,7 +220,7 @@ h4 {
   padding-left: 16px;
   width: 275px;
   height: 87px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -278,7 +277,7 @@ button:hover {
 }
 
 .about-h {
-  font-family: 'crete Round', sans-serif;
+  font-family: "crete Round", sans-serif;
   font-size: 50px;
   font-weight: 400px;
   color: #ff6b00;
@@ -292,7 +291,7 @@ button:hover {
 .resume-button {
   width: 161px;
   height: 48px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -300,7 +299,6 @@ button:hover {
   color: #fff;
   background: #ff6b00;
   border: none;
-
 }
 
 .vector-4 {
@@ -313,7 +311,7 @@ button:hover {
   width: 327px;
   height: 148px;
   margin-bottom: 24px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -329,7 +327,7 @@ button:hover {
 .p-language {
   width: 257px;
   height: 24px;
-  font-family: 'InaiMathi', sans-serif;
+  font-family: "InaiMathi", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -341,7 +339,7 @@ button:hover {
 
 .language-list {
   flex-direction: column;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -376,5 +374,36 @@ button:hover {
 }
 
 /* contact me section */
+.contact-me-header-text {
+  width: 327px;
+  height: 216px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  color: #172b4d;
+  margin-top: 120px;
+  margin-left: 24px;
+}
 
+.no-border {
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  border-bottom: 1px solid gray;
+  box-shadow: none;
+  padding: 14px;
+  width: 295px;
+  outline: none;
+}
 
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 39px;
+  padding: 0;
+  padding-left: 24px;
+  width: 295px;
+}
