--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ button:hover {
 .contact-me-header-text {
   width: 327px;
   height: 216px;
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -415,7 +415,7 @@ button:hover {
 .msg {
   width: 327px;
   height: 114px;
-  background-color: #FBF8F7;;
+  background-color: #fbf8f7;
 }
 
 .form-button {
@@ -441,9 +441,8 @@ button:hover {
   flex-direction: row;
   gap: 21px;
   justify-content: center;
-  color: #505F79;
+  color: #505f79;
   width: 327px;
   height: 40px;
   list-style: none;
 }
-
