--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ button:hover {
   background-color: #1c1a19;
 }
 
-.about-me {
+.mobile {
   background-image: url(images/Frame.png);
   background-repeat: no-repeat;
   background-position: 100% 90%;
@@ -460,6 +460,7 @@ button:hover {
 
 .bottom-line {
   margin-top: 124px;
+  width: 100%;
 }
 
 .bottom-link {
@@ -485,7 +486,7 @@ button:hover {
 
   .headline {
     background-image: url(images/Illustration.png);
-    background-size: 250px;
+    background-size: 200px;
     background-position: 100%;
   }
 
@@ -550,26 +551,28 @@ button:hover {
   }
 
   .about-me {
-    text-align: center;
+    background-image: url(images/Frame.png);
+    background-position: 100% 35%;
+    background-size: 200px;
   }
 
   .about-h {
     font-size: 80px;
     width: 400px;
-    margin-left: 50%;
+    padding-left: 40px;
   }
 
   .p-description {
-    width: 600px;
-    font-size: 25px;
-    margin-left: 30%;
+    width: 500px;
+    font-size: 18px;
     height: 100px;
     text-align: left;
+    padding-left: 40px;
   }
 
   .resume-button {
-    margin-left: 30%;
     margin-top: 0;
+    margin-left: 40px;
   }
 
   .vector-4 {
@@ -643,7 +646,7 @@ button:hover {
 
   .headline {
     background-image: url(images/Illustration.png);
-    background-size: 250px;
+    background-size: 220px;
   }
 
   .recent-text {
@@ -699,6 +702,7 @@ button:hover {
   }
 
   .about-me {
+    background-image: url(images/Frame.png);
     text-align: center;
   }
 
@@ -710,7 +714,7 @@ button:hover {
 
   .p-description {
     width: 600px;
-    font-size: 25px;
+    font-size: 20px;
     margin-left: 200px;
     height: 100px;
     text-align: left;
@@ -935,10 +939,21 @@ button:hover {
   }
 
   /* about me section */
-  .about-me {
-    margin-left: 170px;
+  .about-me-container {
     background-image: url(images/Desktop-frame.png);
-    background-position: 100% 30%;
+    background-position: 100% 10%;
+    background-repeat: no-repeat;
+  }
+
+  .mobile {
+    background: none;
+  }
+
+  .about-me {
+    border-bottom: 1px solid #fff;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 146px;
   }
 
   .about-h {
@@ -958,21 +973,26 @@ button:hover {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400px;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 32px;
     color: #f4f5f7;
   }
 
+  .resume-button {
+    margin-bottom: 221px;
+  }
+
   .vector-4 {
-    width: 1100px;
-    height: 1px;
+    display: none;
   }
 
   .big-container {
     display: flex;
     flex-direction: row;
     gap: 176px;
-    margin-left: 440px;
+    width: 1024px;
+    margin: 115px;
+    text-align: left;
   }
 
   .skills-container {
