--- a/style.css
+++ b/style.css
@@ -275,10 +275,6 @@ h4 {
   width: 327px;
 }
 
-button:hover {
-  color: black;
-}
-
 /* about me section */
 .about-me-container {
   margin-top: 132px;
@@ -796,15 +792,15 @@ button:hover {
     padding: 26px;
     font-size: 20px;
     animation: logo;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
+    animation-duration: 5s;
   }
+
   @keyframes logo {
-    from {
+    0% {
       margin-left: 100%;
     }
 
-    to {
+    100% {
       margin-left: 154px;
     }
   }
@@ -918,8 +914,27 @@ button:hover {
     height: 448px;
   }
 
+  .recent-work-button:hover {
+    transition: all ease-in;
+    transition-duration: 0.5s;
+    color: #f55800;
+    background-color: #fff;
+    border: 1px solid #f55800;
+    box-shadow: 5px 5px 5px 5px #212121;
+  }
+
   .desktop-orange-image {
     display: block;
+  }
+
+  .desktop {
+    transition: all;
+    transition-duration: 1s;
+  }
+
+  .desktop:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 2px 2px lightslategray;
   }
 
   h4 {
@@ -944,6 +959,14 @@ button:hover {
 
   .project-button {
     width: 369px;
+    transition: all ease-in;
+    transition-duration: 0.5s;
+  }
+
+  .project-button:hover {
+    color: #f55800;
+    background-color: #fff;
+    border: 1px solid #f55800;
   }
 
   .stories-head {
@@ -992,6 +1015,13 @@ button:hover {
 
   .resume-button {
     margin-bottom: 221px;
+    transition: all ease-in;
+    transition-duration: 0.5s;
+  }
+
+  .resume-button:hover {
+    color: #f55800;
+    background-color: #fff;
   }
 
   .vector-4 {
@@ -1053,6 +1083,15 @@ button:hover {
 
   .form-button {
     margin-left: 21px;
+  }
+
+  .form-button:hover {
+    transition: all ease-in;
+    transition-duration: 0.5s;
+    color: #f55800;
+    border: 1px solid #f55800;
+    background-color: #fff;
+    box-shadow: 5px 5px 5px 5px #212121;
   }
 
   .bottom-line {
