--- a/style.css
+++ b/style.css
@@ -56,6 +56,36 @@ header {
   padding: 0 1.2rem 6rem 1.2rem;
 }
 
+.menu-slider {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #3c3a39;
+  padding: 0;
+}
+
+.close {
+  margin: 30px;
+  display: flex;
+  justify-content: end;
+}
+
+.menu-links {
+  font-family: "Inter", sans-serif;
+  color: #fff5e1;
+}
+
+.menu-item {
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700px;
+  font-family: 'inter', 'sans-serif';
+  padding: 10px 0;
+  border-bottom: 1px solid #6f6c6b;
+}
+
 .greeting {
   font-family: sans-serif, "Round";
   font-size: 50px;
@@ -476,6 +506,10 @@ h4 {
 }
 
 @media (min-width: 375px) and (max-width: 550px) {
+  .menu-slider {
+    display: none;
+  }
+
   header {
     background-color: #3c3a39;
     display: flex;
@@ -1238,6 +1272,7 @@ h4 {
 }
 
 @media (min-width: 1080px) {
+
   /* headline section */
   body {
     width: 100%;
@@ -1550,6 +1585,8 @@ h4 {
 
   .msg {
     width: 684px;
+    padding: 10px;
+    font-size: 16px;
   }
 
   .form-button {
@@ -1575,5 +1612,9 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .menu-slider {
+    display: none;
   }
 }
