--- a/style.css
+++ b/style.css
@@ -62,8 +62,15 @@ header {
   left: 0;
   width: 100vw;
   height: 100vh;
+  display: none;
+  max-height: 0;
   background: #3c3a39;
   padding: 0;
+}
+
+.expand {
+  display: block;
+  max-height: 100%;
 }
 
 .close {
